Add navigation and exception handling services
This commit introduces a new `NavigationService` and enhances the application's structure with new services and view models to support a more robust user interface. Key updates include the implementation of an `IExceptionHandler` for centralized error handling, along with new service classes for settings, session management, and authentication.

The `MainView` has been restructured to include a login overlay and dynamic layout adjustments based on authentication state. Additionally, several view models have been created or updated to manage user interactions effectively, including `InventoryTransferViewModel`, `SettingsViewModel`, and `WorkOrderTransactionViewModel`.

Documentation has been improved across various files, including detailed references for the Infor VISUAL API Toolkit, ensuring developers have comprehensive guidance on using the new features and workflows. New UI components such as `LocationPickerDialog` and `IncompletePartDialog` have also been added to enhance user interactions.

--- a/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
+++ b/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
@@ -11,6 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="References\Visual Highlighted Screenshots\InventoryTransferHighights.png" />
+    <None Remove="References\Visual Highlighted Screenshots\InventoryTransferIncompletePartID.png" />
+    <None Remove="References\Visual Highlighted Screenshots\InventoryTransferLocationScreen.png" />
+    <None Remove="References\Visual Highlighted Screenshots\WorkOrderScreenshotHighlighted.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.4" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.4" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.4" />
@@ -18,5 +25,20 @@
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="References\Visual Highlighted Screenshots\InventoryTransferHighights.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Page>
+    <Content Include="References\Visual Highlighted Screenshots\InventoryTransferIncompletePartID.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="References\Visual Highlighted Screenshots\InventoryTransferLocationScreen.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="References\Visual Highlighted Screenshots\WorkOrderScreenshotHighlighted.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
