--- a/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
+++ b/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
@@ -41,4 +41,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Copilot Files\UIX Presentation\" />
+  </ItemGroup>
 </Project>
