--- a/MTM_Inventory_Application_Avalonia.Desktop/MTM_Inventory_Application_Avalonia.Desktop.csproj
+++ b/MTM_Inventory_Application_Avalonia.Desktop/MTM_Inventory_Application_Avalonia.Desktop.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia.Angle.Windows.Natives" Version="2.1.25547.20250602" />
     <PackageReference Include="Avalonia.Desktop" Version="11.3.4" />
   </ItemGroup>
 
