--- a/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
+++ b/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
@@ -19,12 +19,16 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.4" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.4" />
+    <PackageReference Include="Avalonia.Angle.Windows.Natives" Version="2.1.25547.20250602" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.4" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.4" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.4" />
+    <PackageReference Include="Projektanker.Icons.Avalonia" Version="9.6.2" />
+    <PackageReference Include="Projektanker.Icons.Avalonia.MaterialDesign" Version="9.6.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,9 +44,5 @@
     <Content Include="References\Visual Highlighted Screenshots\WorkOrderScreenshotHighlighted.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Copilot Files\UIX Presentation\" />
   </ItemGroup>
 </Project>
