--- a/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
+++ b/MTM_Inventory_Application_Avalonia/MTM_Inventory_Application_Avalonia.csproj
@@ -69,19 +69,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="..\docs\CodeMap_CS_Files.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\App.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\ExceptionDialog.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\ExceptionHandling.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\Icons.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\IncompletePartDialog.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\InventoryTransfer.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\LocationPickerDialog.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\LoginScreen.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\MainView.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\MAMPDatabase.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\Settings.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\SettingsView.md.bak" />
-    <None Remove="..\docs\MVVM Definitions\WorkOrderTransaction.md.bak" />
+    <None Remove="..\docs\MD-Files\App.md.bak" />
+    <None Remove="..\docs\MD-Files\ExceptionDialog.md.bak" />
+    <None Remove="..\docs\MD-Files\ExceptionHandling.md.bak" />
+    <None Remove="..\docs\MD-Files\Icons.md.bak" />
+    <None Remove="..\docs\MD-Files\IncompletePartDialog.md.bak" />
+    <None Remove="..\docs\MD-Files\InventoryTransfer.md.bak" />
+    <None Remove="..\docs\MD-Files\LocationPickerDialog.md.bak" />
+    <None Remove="..\docs\MD-Files\LoginScreen.md.bak" />
+    <None Remove="..\docs\MD-Files\MainView.md.bak" />
+    <None Remove="..\docs\MD-Files\MAMPDatabase.md.bak" />
+    <None Remove="..\docs\MD-Files\Settings.md.bak" />
+    <None Remove="..\docs\MD-Files\SettingsView.md.bak" />
+    <None Remove="..\docs\MD-Files\WorkOrderTransaction.md.bak" />
     <None Remove="..\docs\Planned_Implementations.md.bak" />
   </ItemGroup>
 </Project>
